added dash to the rest of the images.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="UTF-8" />
 
-    <link rel="icon" type="image/svg+xml" href="images/icon-location.svg" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="/src/assets/images/icon-location.svg"
+    />
     <link
       rel="stylesheet"
       href="https://unpkg.com/leaflet@1.2.0/dist/leaflet.css"
